# numexpr

./: .gitignore  .hgeol  .hgignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  ADDFUNCS.rst  ANNOUNCE.rst  ANNOUNCE.txt  AUTHORS.txt  CMakeLists.txt  FindNumPy.cmake  FindPythonLibsNew.cmake  INSTALL.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  README  README.rst  README.txt  RELEASE_NOTES.rst  RELEASE_NOTES.txt  RELEASING.md  RELEASING.txt  VERSION  appveyor.yml  bench_install.bat  bug.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  site.cfg.example  val.bash  valgrind-python.supp
.github/: FUNDING.yml
.github/workflows/: build.yml  close-stale-issues.yml  typecheck.yml
C-API/: BLOSC2_INTEGRATION_GUIDE.md  CYTHON_FILES_INDEX.md  CYTHON_INTEGRATION_GUIDE.md  CYTHON_SUMMARY.md  C_API.md  C_API_ARCHITECTURE.txt  C_API_FILES_SUMMARY.txt  C_API_README_START_HERE.md  C_API_SUMMARY.md  C_INTERFACE_GUIDE.md  FINAL_C_INTERFACE_SUMMARY.md  GIL_FLOW_DIAGRAM.txt  GIL_MANAGEMENT_EXPLAINED.md  QUICKSTART_C_INTERFACE.md  UPDATED_CYTHON_INTERFACE.md  blosc2_integration_example.py  blosc2_numexpr_integration.h  blosc2_numexpr_integration.pyx  test_updated_integration.py
LICENSES/: cpuinfo.txt
appveyor/: requirements.txt
bench/: HOWTOGOFAST.rst  bench.py  boolean_timing.py  free_threading.py  issue-36.py  issue-47.py  large_array_vs_numpy.py  mandelbrodt_set.py  microbench.py  multidim.py  ne3vsne2.py  poly.c  poly.py  suite.py  timing.py  timing3.py  timing_complex.py  unaligned-bench.py  unaligned-simple.py  varying-expr.py  vml_timing.py  vml_timing2.py  vml_timing3.py
code_generators/: interp_generator.py
doc/: Makefile  __version__.py  api.rst  conf.py  cython.rst  dev_guide.rst  faq.rst  index.rst  intro.rst  make.bat  mkl.rst  overview.rst  release_notes.rst  requirements.txt  test.rst  user_guide.rst  vm2.rst
examples/: C_API_README.md  c_api_example.py  c_api_usage.c
gnulib/: str-two-way.h
issues/: issue418.py
numexpr/: VERSION  __init__.py  bespoke_functions.hpp  complex_functions.hpp  complex_functions.inc  complexf_functions.hpp  cpuinfo.py  expressions.py  functions.hpp  functions.inc  info.py  interp_body.c  interp_body.cpp  interpreter.c  interpreter.cpp  interpreter.hpp  interpreter.pyi  missing_posix_functions.inc  module.cpp  module.hpp  msvc_function_stubs.hpp  msvc_function_stubs.inc  necompiler.py  numexpr_capi.cpp  numexpr_capi.h  numexpr_config.hpp  numexpr_object.cpp  numexpr_object.hpp  opcodes.hpp  opcodes.inc  str-two-way.hpp  utils.py  version.py  version.pyi
numexpr/tests/: __init__.py  conftest.py  test_complex64_simple.py  test_numexpr.py
numexpr/win32/: pthread.c  pthread.h
numexpr3/: __init__.py  benchmark.hpp  blocks.hpp  complex_functions.hpp  cpuinfo.py  expressions.py  functions_GENERATED.cpp  interp_body_GENERATED.cpp  interp_body_stub.cpp  interp_header_GENERATED.hpp  interp_header_stub.hpp  interpreter.cpp  interpreter.hpp  missing_posix_functions.hpp  module.cpp  module.hpp  msvc_function_stubs.hpp  ne3compiler.py  necompiler.py  numexpr_config.hpp  numexpr_object.cpp  numexpr_object.hpp  real_functions.hpp  str-two-way.hpp  string_functions.hpp  utils.py  version.py
numexpr3/tests/: __init__.py  autotest_GENERATED.py  autotest_stub.py  handtests_ne3.py  problems.py  simple_ne3.py  test_numexpr.py
numexpr3/win32/: pthread.c  pthread.h
numexpr_mod/: __init__.py  complex_functions.hpp  cpuinfo.py  expressions.py  module.cpp  necompiler.py  numexpr_config.hpp  numexpr_object.cpp  utils.py
numexpr_mod/tests/: __init__.py  test_numexpr.py
