[build-system]
requires = [
    "setuptools>=77.0.0",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["numexpr"]

[project]
name = "numexpr"
description = "Fast numerical expression evaluator for NumPy"
readme = "README.rst"
authors = [{name = "David M. Cooke, Francesc Alted, and others", email = "blosc@blosc.org"}]
maintainers = [{ name = "Blosc Development Team", email = "blosc@blosc.org"}]
license = "MIT"
license-files = ["LICENSE.txt", "LICENSES/*"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
# Follow guidelines from https://scientific-python.org/specs/spec-0000/
dependencies = [
    "numpy>=1.23.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/pydata/numexpr"
documentation = "https://numexpr.readthedocs.io"
repository = "https://github.com/pydata/numexpr"

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-run-parallel>=0.6.0",
]

[tool.cibuildwheel]
build-verbosity = 1
skip = ["*-manylinux_i686", "*_ppc64le", "*_s390x"]
# Let's use a more recent version of the manylinux image for more modern compilers
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-groups = ["test"]
test-command = ["python -m pytest --pyargs numexpr"]

[[tool.cibuildwheel.overrides]]
select = "cp31*t-*"
test-command = ["python -m pytest --parallel-threads=4 --pyargs numexpr"]
