[metadata]
name = numexpr3
version = 3.0.1a7
description = Fast numerical expression evaluator for NumPy
author = Robert A. McLeod, David M. Cooke, Francesc Alted, and others
author_email = robbmcleod@gmail.com
url = https://github.com/pydata/numexpr
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers = 
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Intended Audience :: Information Technology
        License :: OSI Approved :: BSD License
        Programming Language :: Python
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Topic :: Software Development :: Libraries :: Python Modules
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX :: Linux

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
# install_requires =
#     numpy
