[metadata]
name = numexpr_mod
version = 2.8.7
description = Fast numerical expression evaluator for NumPy
author = Alex K.
url = https://github.com/mrcheatak/numexpr_mod
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
# install_requires =
#     numpy

