[metadata]
name = numexpr
version = 2.9.0
description = Fast numerical expression evaluator for NumPy
author = David M. Cooke, Francesc Alted, and others
maintainer = Francesc Alted
maintainer_email = faltet@gmail.com
url = https://github.com/pydata/numexpr
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
# install_requires =
#     numpy

